Backend/infra/k8s/authentication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-depl
  namespace: default
  labels:
    k8s-app: authentication-depl
spec:
  minReadySeconds: 9
  replicas: 1
  selector:
    matchLabels:
      k8s-app: authentication-depl
  template:
    metadata:
      name: authentication-depl
      labels:
        k8s-app: authentication-depl
    spec:
      containers:
        - name: authentication-depl
          image: registry.digitalocean.com/gogreen-repo/authentication
          securityContext:
            privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-srv
spec:
  selector:
    k8s-app: authentication-depl
  ports:
    - name: authentication
      protocol: TCP
      port: 4000
      targetPort: 4000
