Backend/infra/k8s/authentication-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-mongo
  template:
    metadata:
      labels:
        app: authentication-mongo
    spec:
      containers:
        - name: authentication-mongo
          image: mongo
          volumeMounts:
            - name: authentication-mongo-volume
              mountPath: /data/db
      volumes:
        - name: authentication-mongo-volume
          persistentVolumeClaim:
            claimName: authentication-mongo-volume
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-mongo-srv
spec:
  selector:
    app: authentication-mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
