Backend/infra/k8s/catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: registry.digitalocean.com/gogreen-repo/catalog
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-srv
spec:
  selector:
    app: catalog
  ports:
    - name: catalog
      protocol: TCP
      port: 4002
      targetPort: 4002
