Backend/infra/k8s/file-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
    spec:
      containers:
        - name: file
          image: ark09/file
---
apiVersion: v1
kind: Service
metadata:
  name: file-srv
spec:
  selector:
    app: file
  ports:
    - name: file
      protocol: TCP
      port: 4006
      targetPort: 4006
