Backend/infra/k8s/file-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-mongo
  template:
    metadata:
      labels:
        app: file-mongo
    spec:
      containers:
        - name: file-mongo
          image: mongo
          volumeMounts:
            - name: file-mongo-volume
              mountPath: /data/db
      volumes:
        - name: file-mongo-volume
          persistentVolumeClaim:
            claimName: file-mongo-volume
---
apiVersion: v1
kind: Service
metadata:
  name: file-mongo-srv
spec:
  selector:
    app: file-mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
