Backend/infra/k8s/profile-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-mongo-depl
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: profile-mongo
  template:
    metadata:
      labels:
        app: profile-mongo
    spec:
      containers:
       -  name: profile-mongo
          image: mongo 
          volumeMounts:
            - name: profile-mongo-volume
              mountPath: /data/db
      volumes:
        - name: profile-mongo-volume
          persistentVolumeClaim:
              claimName: profile-mongo-volume               
---
apiVersion: v1
kind: Service
metadata:
  name: profile-mongo-srv
spec:
  selector:
    app: profile-mongo
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
