Backend/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: gogreen.com
      http:
        paths:
          - path: /api/v1/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authentication-srv
                port:
                  number: 4000
          - path: /api/v1/profiles(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-srv
                port:
                  number: 4001
